Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Spelling fixes in french translation.
- Updated Spanish translation.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 